<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="12dp"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="0dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />


        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toTopOf="@+id/img_item_photo" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/description"
            android:textSize="12sp"
            android:textStyle="normal"
            card_view:layout_constraintBottom_toBottomOf="@+id/tv_item_date"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_title"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_title"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_title" />

        <TextView
            android:id="@+id/tv_item_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date"
            android:textSize="12sp"
            android:textStyle="italic"
            card_view:layout_constraintEnd_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintStart_toStartOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/img_item_photo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/goToArticle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:contentDescription="@string/go_to_article"
            android:focusable="true"
            android:text="@string/go_to_article"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>