<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardElevation="0dp"
    card_view:cardCornerRadius="0dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />


        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/hasil_analisa"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toStartOf="@+id/deleteHistory"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toTopOf="@+id/img_item_photo" />

        <TextView
            android:id="@+id/tv_item_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            card_view:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_description"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_description" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deleteHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:contentDescription="@string/delete_history"
            android:focusable="true"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/baseline_delete_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>